<resources>
    <string name="app_name">MyDrawings</string>
    <string name="clear">clear</string>
    <string name="black_button">black button</string>
    <string name="red_button">red button</string>
    <string name="orange_button">orange button</string>
    <string name="blue_button">blue button</string>
    <string name="green_button">green button</string>
    <string name="screen_clear">Screen cleared !</string>
    <string name="message">If you need help, press the question mark at the top right</string>
    <string name="help_explanations">Click on the different rounds to change color
        \nYou can repeat your drawing as many times as you want by pressing the broom
        \nIf you want to erase a part of your drawing, use the eraser.
        \n\nEach time you press the magnifying glass with the +, the line of your drawing becomes bigger
        \nEach time you press the magnifying glass with the -, the line of your drawing becomes thinner</string>
    <string name="purple_button">purple_button</string>
    <string name="erase">erase</string>
    <string name="reduces_the_thickness_of_the_line">Reduces the thickness of the line</string>
    <string name="increases_the_thickness_of_the_line">Increases the thickness of the line</string>
    <string name="help">help</string>
    <string name="close">close</string>
</resources>
