<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mydrawings.MainActivity"
    android:orientation="vertical"
    android:weightSum="6">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:weightSum="3"
        android:background="#44fcff">

        <ImageView
            android:id="@+id/plusIV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/increases_the_thickness_of_the_line"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/plus" />

        <ImageView
            android:id="@+id/minusIV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/reduces_the_thickness_of_the_line"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/minus" />

        <ImageView
            android:id="@+id/questionIV"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/help"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/question" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/myRL"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.8">

        <view
            android:id="@+id/view"
            class="com.mydrawings.MyPathDrawColor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white" />
    </RelativeLayout>

    <!--
    <android.support.design.widget.FloatingActionButton
        android:layout_height="wrap_content"
        android:clickable="true"
        app:srcCompat="@drawable/plus1"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/plusBtn"
        app:backgroundTint="#44fcff"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_marginRight="5dp"
        app:fabSize="mini" />

    <android.support.design.widget.FloatingActionButton
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="mini"
        app:srcCompat="@drawable/minus1"
        android:layout_below="@+id/plusBtn"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/minusBtn"
        app:backgroundTint="#44fcff"
        android:onClick="minusBtn"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_marginRight="5dp" />
-->

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
        android:weightSum="8"
            android:background="#44fcff"
            android:padding="5dp"
        android:layout_weight="0.7"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/clearIV"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/clear"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/clear" />

        <ImageView
            android:id="@+id/eraseIV"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/erase"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/erase" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/blackIV"
                android:layout_weight="1"
                app:srcCompat="@drawable/black"
                android:contentDescription="@string/black_button"
                android:layout_gravity="center"
                android:paddingEnd="2dp"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:paddingStart="2dp"
                android:scaleType="fitCenter" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/redIV"
                android:layout_weight="1"
                app:srcCompat="@drawable/red"
                android:contentDescription="@string/red_button"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:layout_gravity="center"
                android:paddingEnd="2dp"
                android:paddingStart="2dp"
                android:scaleType="fitCenter" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/blueIV"
                android:layout_weight="1"
                app:srcCompat="@drawable/blue"
                android:contentDescription="@string/blue_button"
                android:paddingRight="2dp"
                android:layout_gravity="center"
                android:paddingEnd="2dp"
                android:paddingLeft="2dp"
                android:paddingStart="2dp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/greenIV"
                android:layout_weight="1"
                app:srcCompat="@drawable/green"
                android:contentDescription="@string/green_button"
                android:paddingRight="2dp"
                android:layout_gravity="center"
                android:paddingEnd="2dp"
                android:paddingLeft="2dp"
                android:paddingStart="2dp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/orangeIV"
                android:layout_weight="1"
                app:srcCompat="@drawable/orange"
                android:contentDescription="@string/orange_button"
                android:paddingRight="2dp"
                android:layout_gravity="center"
                android:paddingEnd="2dp"
                android:paddingLeft="2dp"
                android:paddingStart="2dp" />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/purpleIV"
                android:layout_weight="1"
                app:srcCompat="@drawable/purple"
                android:contentDescription="@string/purple_button"
                android:layout_gravity="center"
                android:paddingEnd="2dp"
                android:paddingRight="2dp"
                android:paddingLeft="2dp"
                android:paddingStart="2dp" />
        </LinearLayout>


</LinearLayout>
